mType/tests/testFiles/arrays/error/arrayLiteralTypeMismatch.mt
// Test array literal type validation errors
print("Testing array literal type validation");

// Type mismatch in integer array
int[] numbers = [1, 2, "three", 4];  // Error: string in int array

print("This should not be reached");